Add fitur recipe detail

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Data\DishData.cs" />
     <Compile Include="Data\DishTypeData.cs" />
     <Compile Include="Data\RecipeData.cs" />
+    <Compile Include="Data\IngredientData.cs" />
     <Compile Include="Enum\NotificationType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
